import and visualize data

--- a/feature_extraction_model.ipynb
+++ b/feature_extraction_model.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyMOh9Tajdo3NfQUyq1cGGak",
+      "authorship_tag": "ABX9TyOQvAPUd/Qe+9kb5O7VTey9",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -1059,7 +1059,11 @@
     {
       "cell_type": "markdown",
       "source": [
-        "# **Dish Detect:** Feature-extraction model"
+        "# **Dish Detect:** Feature-extraction model\n",
+        "\n",
+        "**End-to-end CNN Image Classification Model**\n",
+        "\n",
+        "Feature extraction model based on EfficientNetB1 trained and evaluated on the Food101 Dataset"
       ],
       "metadata": {
         "id": "tOrFFIBVaR7K"
@@ -1361,6 +1365,73 @@
           ]
         }
       ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Features of Food101 fomr TFDS\n",
+        "ds_info.features"
+      ],
+      "metadata": {
+        "id": "CvZ9bLQClBO5"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Get class names\n",
+        "class_names = ds_info.features[\"label\"].names\n",
+        "class_names[:10]"
+      ],
+      "metadata": {
+        "id": "F9tfopB7lHg9"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Take on sample of the train data\n",
+        "train_data_sample = train_data.take(1)\n",
+        "train_data_sample"
+      ],
+      "metadata": {
+        "id": "_XTvRXCrlMbC"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Output info about the training sample\n",
+        "for image, label in train_data_sample:\n",
+        "  print(f\"Image shape: {image.shape}\")\n",
+        "  print(f\"Image datatype: {image.dtype}\")\n",
+        "  print(f\"Target class from Food101: {class_names[label]}\")"
+      ],
+      "metadata": {
+        "id": "j6ZVwDGdlR9d"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Plot the image\n",
+        "plt.imshow(image)\n",
+        "plt.title(f\"Image: {class_names[label]}\")\n",
+        "plt.axis(False)"
+      ],
+      "metadata": {
+        "id": "A2YR6yT3lV36"
+      },
+      "execution_count": null,
+      "outputs": []
     },
     {
       "cell_type": "markdown",
